Web breakpoints layout shift fix and background gambiarras

--- a/global.css
+++ b/global.css
@@ -1,79 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-	--backdrop: hsl(0 0% 60% / 0.12);
-	--radius: 1;
-	--border: 1;
-	--backup-border: var(--backdrop);
-	--size: 200;
-
-	--base: 80;
-	--spread: 500;
-	--outer: 1;
-}
-
-/* Glow specific styles */
-[data-glow] {
-	--border-size: calc(var(--border, 2) * 1px);
-	--spotlight-size: calc(var(--size, 150) * 1px);
-	background-image: radial-gradient(
-		var(--spotlight-size) var(--spotlight-size) at calc(var(--x, 0) * 1px)
-			calc(var(--y, 0) * 1px),
-		transparent
-	);
-	background-size: calc(100% + (2 * var(--border-size)))
-		calc(100% + (2 * var(--border-size)));
-	background-position: 50% 50%;
-	background-attachment: fixed;
-	border: var(--border-size) solid var(--backup-border);
-	position: relative;
-	touch-action: none;
-}
-
-[data-glow]::before,
-[data-glow]::after {
-	pointer-events: none;
-	content: "";
-	position: absolute;
-	inset: calc(var(--border-size) * -1);
-	border: var(--border-size) solid transparent;
-	border-radius: calc(var(--radius) * 1rem);
-	background-attachment: fixed;
-	background-size: calc(100% + (2 * var(--border-size)))
-		calc(100% + (2 * var(--border-size)));
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	mask: linear-gradient(transparent, transparent),
-		linear-gradient(white, white);
-	mask-clip: padding-box, border-box;
-	mask-composite: intersect;
-}
-
-/* This is the emphasis light */
-[data-glow]::before {
-	background-image: radial-gradient(
-		calc(var(--spotlight-size) * 0.75) calc(var(--spotlight-size) * 0.75) at
-			calc(var(--x, 0) * 1px) calc(var(--y, 0) * 1px),
-		transparent 100%
-	);
-	filter: brightness(2);
-}
-
-/* This is the spotlight */
-[data-glow]::after {
-	background-image: radial-gradient(
-		calc(var(--spotlight-size) * 0.5) calc(var(--spotlight-size) * 0.5) at
-			calc(var(--x, 0) * 1px) calc(var(--y, 0) * 1px),
-		hsl(0 100% 100% / var(--border-light-opacity, 1)),
-		transparent 100%
-	);
-}
-
-[data-glow] [data-glow] {
-	position: absolute;
-	inset: 0;
-	will-change: filter;
-	opacity: var(--outer, 1);
-}
